contiuned fixes to enviroment along with improved error handling and optimisations

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DISCORD_BOT_TOKEN=your_discord_bot_token_here
+DISCORD_BOT_TOKEN="MTI2MzkwODI2ODk2Mzc5NDk2Ng.GIQ4WX.dM9X6nUGXHrXe6xvJtG-i4MlizwvVhzoZ7koeU"
